--- a/example/code-notes/api-gateway-pattern.mdx
+++ b/example/code-notes/api-gateway-pattern.mdx
@@ -28,7 +28,7 @@ created: 2021-05-01
 
 Также вместо универсального API, Gateway может предоставлять разные API для каждого клиента.
 Если же API для каждого клиента выделить в отдельный Gateway API, то мы получим реализацию шаблона
-<Highlight>Backend for Frontend</Highlight>. Пример реализации данного шаблона:
+<Underline>Backend For Frontend</Underline>
 
 ![alt text](https://microservices.io/i/bffe.png)
 
