--- a/example/code-notes/api-gateway-pattern.mdx
+++ b/example/code-notes/api-gateway-pattern.mdx
@@ -27,8 +27,7 @@ created: 2021-05-01
 ![alt text](https://microservices.io/i/apigateway.jpg)
 
 Также вместо универсального API, Gateway может предоставлять разные API для каждого клиента.
-Если же API для каждого клиента выделить в отдельный Gateway API, то мы получим реализацию шаблона
-<Underline>Backend For Frontend</Underline>
+Если же API для каждого клиента выделить в отдельный Gateway API, то мы получим реализацию шаблона <Underline>Backend For Frontend</Underline>
 
 ![alt text](https://microservices.io/i/bffe.png)
 
